	PR c++/42844 	* decl.c (check_for_uninitialized_const_var): Handle classes that need 	constructing, too. 	(check_initializer): Call it for classes that need constructing, too. 	* class.c (in_class_defaulted_default_constructor): New. 	* cp-tree.h: Declare it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@158797 138bc75d-0d04-0410-961f-82ee72b054a4