libstdc++-v3/src/future.cc
@@ -1,6 +1,6 @@
 // future -*- C++ -*-
 
-// Copyright (C) 2009 Free Software Foundation, Inc.
+// Copyright (C) 2009, 2010 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -28,6 +28,8 @@ namespace
 {
   struct future_error_category : public std::error_category
   {
+    future_error_category() {}
+
     virtual const char*
     name() const 
     { return "future"; }
